[gd_scene load_steps=14 format=2]

[ext_resource path="res://theme/st.tres" type="Theme" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/scenes/quit_message.gd" type="Script" id=3]
[ext_resource path="res://assets/ttf/SpaceCapitan-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://src/prebuilt-classes/mybutton.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.101961, 0.101961, 0.717647 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.231373, 0.435294, 0.372549, 1 )
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color( 0.509804, 0.898039, 0.780392, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.596078, 0.215686, 0.215686, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.431373, 0.160784, 0.160784, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.776471, 0.282353, 0.282353, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/ttf/SpaceCapitan-Regular.otf"

[sub_resource type="DynamicFont" id=7]
font_data = SubResource( 6 )

[node name="Quit" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = -6.0
margin_top = -8.0
margin_right = 1038.0
margin_bottom = 604.0
rect_pivot_offset = Vector2( 449, 159 )
custom_styles/panel = SubResource( 1 )

[node name="logged_out" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -306.5
margin_top = -189.5
margin_right = 348.5
margin_bottom = 203.5
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="logged_out"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -133.5
margin_right = 175.0
margin_bottom = 58.5
rect_pivot_offset = Vector2( 191, 96.5 )
custom_fonts/font = ExtResource( 2 )
text = "Estás seguro que quieres cerrar sesión?
Tu progreso no será guardado hasta que completes algún minijuego"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="logged_out"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -541.0
margin_top = -289.0
margin_right = -492.0
margin_bottom = -250.0
rect_rotation = -178.116
rect_pivot_offset = Vector2( 191, 96.5 )
custom_fonts/font = ExtResource( 2 )
text = "?"
align = 1
autowrap = true

[node name="logout" type="Button" parent="logged_out"]
margin_left = 184.5
margin_top = 292.5
margin_right = 293.5
margin_bottom = 339.5
custom_colors/font_color_disabled = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color_focus = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "cerrar sesión"
script = ExtResource( 5 )

[node name="Back" type="Button" parent="logged_out"]
margin_left = 345.5
margin_top = 292.5
margin_right = 454.5
margin_bottom = 339.5
theme = ExtResource( 1 )
text = "Cancelar"
script = ExtResource( 5 )

[node name="logged" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -317.0
margin_top = -193.0
margin_right = 338.0
margin_bottom = 200.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="logged"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -133.5
margin_right = 175.0
margin_bottom = 58.5
rect_pivot_offset = Vector2( 191, 96.5 )
custom_fonts/font = ExtResource( 2 )
text = "Estás seguro que quieres salir?
Tu progreso no será guardado hasta que completes algún minijuego"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="logged"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -541.0
margin_top = -289.0
margin_right = -492.0
margin_bottom = -250.0
rect_rotation = -178.116
rect_pivot_offset = Vector2( 191, 96.5 )
custom_fonts/font = ExtResource( 2 )
text = "?"
align = 1
autowrap = true

[node name="Exit" type="Button" parent="logged"]
margin_left = 184.5
margin_top = 292.5
margin_right = 293.5
margin_bottom = 339.5
custom_colors/font_color_disabled = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color_focus = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Salir"
script = ExtResource( 5 )

[node name="Back" type="Button" parent="logged"]
margin_left = 345.5
margin_top = 292.5
margin_right = 454.5
margin_bottom = 339.5
theme = ExtResource( 1 )
text = "Cancelar"
script = ExtResource( 5 )

[node name="Exit_no_logged" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -317.0
margin_top = -193.0
margin_right = 338.0
margin_bottom = 200.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="Exit_no_logged"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.751
margin_top = -73.5
margin_right = 179.249
margin_bottom = 40.5
rect_pivot_offset = Vector2( 191, 96.5 )
custom_fonts/font = ExtResource( 2 )
text = "Estás seguro que quieres salir?
"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="Exit_no_logged"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -537.251
margin_top = -229.0
margin_right = -488.251
margin_bottom = -190.0
rect_rotation = -178.116
rect_pivot_offset = Vector2( 191, 96.5 )
custom_fonts/font = ExtResource( 2 )
text = "?"
align = 1
autowrap = true

[node name="Exit" type="Button" parent="Exit_no_logged"]
margin_left = 184.5
margin_top = 236.5
margin_right = 293.5
margin_bottom = 283.5
custom_colors/font_color_disabled = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color_focus = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.92549, 0.92549, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Salir"
script = ExtResource( 5 )

[node name="Back" type="Button" parent="Exit_no_logged"]
margin_left = 345.5
margin_top = 236.5
margin_right = 454.5
margin_bottom = 283.5
theme = ExtResource( 1 )
text = "Cancelar"
script = ExtResource( 5 )

[connection signal="pressed" from="logged_out/logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="logged_out/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="logged/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="logged/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Exit_no_logged/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Exit_no_logged/Back" to="." method="_on_Back_pressed"]
